crates/vexor-compiler/tests/golden/error/output/match_empty.err
parse error at line 3, column 24
  |
3 | let result = match r { }
  |                        ^
invalid match arm